# ultimate-copilot-token-optimizer-pro

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  Dockerfile  README.md  TOKENOMICS.md  TrimP_hook_bridge.py  TrimP_mcp_server.py  TrimP_mcp_wrapper.sh  auto_import_daemon.py  auto_import_sessions.sh  byok_server.py  clean_db.sql  docker-compose.yml  import_copilot_session.py  import_to_correct_db.py  migrate_all_data.py  pyproject.toml  requirements.txt  setup_auto_compression.sh  test_all_models.sh  test_byok.sh  test_compression_quality.py
TrimP/: __init__.py  auto_runner.py  byok_proxy.py  chat_optimizer.py  cli.py  compaction.py  compress_api.py  copilot_auth.py  copilot_bash_wrapper.py  copilot_hooks.py  db.py  intellij_proxy.py  monitor.py  proxy.py  session.py
TrimP-intellij/: README.md  TrimP-intellij-proxy  TrimP_intellij_proxy.py  test_compression.py
TrimP/commands/: doctor.py  expand.py  memory_review.py  quick.py  report_cmd.py  resume_lean.py  savings.py  token_coach.py  token_optimizer.py
TrimP/compression/: __init__.py  activity.py  archive.py  bash.py  compressor.py  delta.py  json_table.py  loop_detect.py  prompt_compression.py  search.py  skeleton.py  stopword_removal.py  structural.py  timer.py  verbosity.py
scripts/: TrimP-a-b-test.sh  TrimP-copilot  install.sh  migrate_db.py  monitor-live.sh  restart-dashboard.sh  start-auto-import.sh  start-byok.sh  start-proxy.sh  test-monitor.sh  verify-algorithms.sh  verify-compression.sh
tests/: test_advanced_algorithms.py  test_chat_optimizer.py  test_headroom_integration.py
(+55 files in other folders)
